--- a/Actividad 3.html
+++ b/Actividad 3.html
@@ -62,7 +62,7 @@
   </section>
 
   <footer class="hidden">
-    <p>&copy; 2025 Odyone App | Modelo de negocio inclusivo</p>
+    <p>&copy; 2025 Odyone App | Modelo de negocio inclusivo para los que buscan chamba</p>
     <p>
       <a href="#">Facebook</a> | 
       <a href="#">Twitter</a> | 
