Actualización y corrección de logo en Actividad 3

--- a/Actividad 3.html
+++ b/Actividad 3.html
@@ -42,8 +42,8 @@
 
   <section id="valor" class="hidden">
     <h2>Promesa de Valor</h2>
-    <p><strong>Para clientes:</strong> acceso rápido, precios justos, transparencia y confianza.</p>
-    <p><strong>Para trabajadores:</strong> capacitación, ingresos dignos, estabilidad y crecimiento.</p>
+    <p><strong>Para clientes:</strong> Acceso rápido, precios justos, transparencia y confianza.</p>
+    <p><strong>Para trabajadores:</strong> Capacitación, ingresos dignos, estabilidad y crecimiento.</p>
   </section>
 
   <section id="capacitacion" class="hidden">
@@ -62,7 +62,7 @@
   </section>
 
   <footer class="hidden">
-    <p>&copy; 2025 Odyone App | Modelo de negocio inclusivo para los que buscan chamba</p>
+    <p>&copy; 2025 Odyone App | Modelo de negocio inclusivo/p>
     <p>
       <a href="#">Facebook</a> | 
       <a href="#">Twitter</a> | 
